# tacos

./: .clang-format  .codecov.yml  .gitignore  CMakeLists.txt  Dockerfile  README.md
.circleci/: config.yml
benchmark/: CMakeLists.txt
benchmark/railroad_with_open/: plant1.pbtxt  spec1.pbtxt
cmake/: TacosConfig.cmake  tacos-config.cmake
doc/: overview.md  pseudo_code.md  pseudo_code.txt
docs/: Interval_8h_source.html  MTLFormula_8h_source.html  MTLFormula_8hpp_source.html  XmlWriter_8h_source.html  adapter_8h_source.html  annotated.html  app_2include_2app_2app_8h_source.html  app_8h_source.html  ata_8h_source.html  ata_8hpp_source.html  ata__formula_8h_source.html  ata__formula_8hpp_source.html  automata_8h_source.html  automata_8hpp_source.html  canonical__word_8h_source.html  classes.html  classtacos_1_1Clock-members.html  classtacos_1_1Clock.html  classtacos_1_1app_1_1Launcher-members.html  classtacos_1_1app_1_1Launcher.html  classtacos_1_1automata_1_1AtomicClockConstraintT-members.html  classtacos_1_1automata_1_1AtomicClockConstraintT.html  classtacos_1_1automata_1_1Clock-members.html  classtacos_1_1automata_1_1Clock.html  classtacos_1_1automata_1_1InvalidClockComparisonOperatorException-members.html  classtacos_1_1automata_1_1InvalidClockComparisonOperatorException.html  classtacos_1_1automata_1_1InvalidClockComparisonOperatorException__coll__graph.map  classtacos_1_1automata_1_1InvalidClockComparisonOperatorException__coll__graph.md5  classtacos_1_1automata_1_1InvalidClockComparisonOperatorException__inherit__graph.map  classtacos_1_1automata_1_1InvalidClockComparisonOperatorException__inherit__graph.md5  classtacos_1_1automata_1_1InvalidClockException-members.html  classtacos_1_1automata_1_1InvalidClockException.html  classtacos_1_1automata_1_1InvalidClockException__coll__graph.map  classtacos_1_1automata_1_1InvalidClockException__coll__graph.md5  classtacos_1_1automata_1_1InvalidClockException__inherit__graph.map  classtacos_1_1automata_1_1InvalidClockException__inherit__graph.md5  classtacos_1_1automata_1_1InvalidSymbolException-members.html  classtacos_1_1automata_1_1InvalidSymbolException.html  classtacos_1_1automata_1_1InvalidSymbolException__coll__graph.map  classtacos_1_1automata_1_1InvalidSymbolException__coll__graph.md5  (+617 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+62 more)
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  main.cpp  ta_visualizer.cpp
src/app/include/app/: app.h
src/automata/: CMakeLists.txt  ata.cpp  ata_formula.cpp  automata.cpp  ta.cpp  ta.proto  ta_proto.cpp  ta_regions.cpp
src/automata/include/automata/: ata.h  ata.hpp  ata_formula.h  ata_formula.hpp  automata.h  automata.hpp  ta.h  ta.hpp  ta_product.h  ta_product.hpp  ta_proto.h  ta_proto.hpp  ta_regions.h  ta_regions.hpp
src/gocos/: CMakeLists.txt  golog_adapter.cpp  golog_program.cpp  golog_state_adapter.cpp  golog_symbols.cpp
src/gocos/include/gocos/: golog_adapter.h  golog_adapter.hpp  golog_program.h  golog_state_adapter.h  golog_symbols.h
src/golog-app/: CMakeLists.txt  app.cpp  main.cpp
src/golog-app/include/app/: app.h
src/golog_adapter/: CMakeLists.txt  golog_adapter.cpp  golog_path_search.cpp  golog_program.cpp  golog_symbols.cpp
src/golog_adapter/include/golog_adapter/: golog_adapter.h  golog_adapter.hpp  golog_path_search.h  golog_program.h
src/golog_app/: CMakeLists.txt  app.cpp  main.cpp
src/golog_app/include/golog_app/: app.h
src/mtl/: CMakeLists.txt  MTLFormula.cpp  mtl.proto  mtl_proto.cpp
src/mtl/include/mtl/: Interval.h  MTLFormula.h  MTLFormula.hpp  mtl_proto.h
src/mtl_ata_translation/: CMakeLists.txt  translator.cpp
src/mtl_ata_translation/include/mtl_ata_translation/: translator.h  translator.hpp
src/search/: CMakeLists.txt  golog_adapter.cpp  search_tree.cpp
src/search/include/search/: adapter.h  canonical_word.h  create_controller.h  golog_adapter.h  heuristics.h  operators.h  plant_adapter.h  preorder_traversal.h  reg_a.h  search.h  search_tree.h  synchronous_product.h  ta_adapter.h
src/utilities/: CMakeLists.txt  instantiations.cpp
src/utilities/graphviz/: CMakeLists.txt  graph.cpp  node.cpp
src/utilities/graphviz/include/utilities/graphviz/: graphviz.h
src/utilities/include/io/: XmlWriter.h
src/utilities/include/utilities/: Interval.h  config.h  numbers.h  powerset.h  priority_thread_pool.h  priority_thread_pool.hpp  to_string.h  type_traits.h  types.h
src/utilities/io/: CMakeLists.txt  XmlWriter.cpp
src/utilities/io/include/: XmlWriter.h
src/visualization/: CMakeLists.txt  visualization.cpp
src/visualization/include/visualization/: interactive_tree_to_graphviz.h  ta_to_graphviz.h  tree_to_graphviz.h
test/: CMakeLists.txt  benchmark.cpp  benchmark_conveyor_belt.cpp  benchmark_golog.cpp  benchmark_golog.h  benchmark_golog_household.cpp  benchmark_golog_robot.cpp  benchmark_railroad.cpp  benchmark_robot.cpp  catch2_main.cpp  csma_cd.cpp  csma_cd.h  fischer.cpp  fischer.h  golog_household.cpp  golog_household.h  golog_railroad.cpp  golog_railroad.h  golog_robot.cpp  golog_robot.h  golog_test_fixture.cpp  golog_test_fixture.h  heuristics_generator.h  railroad.cpp  railroad.h  railroad_location.cpp  railroad_location.h  test_app.cpp  test_ata.cpp  test_ata_formula.cpp  test_clock.cpp  test_create_controller.cpp  test_csma_cd.cpp  test_fischer.cpp  test_golog_app.cpp  test_golog_household.cpp  test_golog_railroad.cpp  test_golog_robot.cpp  test_golog_search.cpp  test_golog_symbols.cpp  (+27 more)
test/data/golog_app/: robot_camera.gpp  robot_camera_spec.pbtxt  robot_camera_spec_pass.pbtxt
test/data/railroad/: plant.pbtxt  spec.pbtxt
test/data/simple/: plant.pbtxt  spec.pbtxt
(+39 files in other folders)
