find_package(range-v3 REQUIRED)

add_library(ta SHARED ta.cpp automata.cpp ata.cpp ta_regions.cpp)
target_link_libraries(ta PUBLIC range-v3::range-v3 utilities fmt::fmt NamedType)
target_include_directories(ta PUBLIC include ${Boost_INCLUDE_DIR})

find_package(Protobuf QUIET)
if (Protobuf_FOUND)
  message(STATUS "Protobuf found, building TA proto library")
  protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ta.proto)
  add_library(ta_proto SHARED ta_proto.cpp ${PROTO_SRCS} ${PROTO_HDRS})
  target_link_libraries(ta_proto PUBLIC ta protobuf::libprotobuf PRIVATE range-v3::range-v3)
  target_include_directories(ta_proto PUBLIC include ${CMAKE_BINARY_DIR}/src)
else()
  message(STATUS "Protobuf not found, skipping TA proto library")
endif()
