find_package(PkgConfig QUIET REQUIRED)
pkg_check_modules(gvc libgvc QUIET IMPORTED_TARGET)

if (gvc_FOUND)
  message(STATUS "Found graphviz, building wrapper library")
  add_library(graphviz SHARED graph.cpp node.cpp)
  target_include_directories(graphviz PUBLIC include)
  target_link_libraries(graphviz PUBLIC gvc PkgConfig::gvc)
else()
  message(STATUS "Could not find graphviz, omitting graphviz wrapper library")
endif()
